<resources>
    <string name="app_name">CadFirebase</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="hint_nome">Nome</string>
    <string name="titulocadastro">Cadastro De Usuarios</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="Btncadastro">Cadastrar</string>
    <string name="BtnLogar">Sing in</string>
    <string name="criarconta">Sing up</string>
    <string name="esqueceusenha">Redefinir Senha ?</string>
    <string name="cadastrousuario">Cadastro De Usuario</string>
    <string name="redemail">Redefinição De Senha</string>
    <string name="btnRedefinirsenha">Redefinir</string>
    <string name="item_sair">Sair</string>
    <string name="title_activity_home">CadFire</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
