<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developer.allef.cadfirebase.LoginActivity">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/labelemail"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelnome">

        <EditText
            android:id="@+id/txtemaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/labesenha"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelemail">

        <EditText
            android:id="@+id/txtsenhalogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_senha"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/BtnLogar"
        android:id="@+id/btnlogar"
        android:layout_below="@+id/labesenha"
        android:textColor="@android:color/black"
         />

    <Button
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/criarconta"
        android:id="@+id/btncadastrar"
        android:textColor="@android:color/black"
        android:layout_below="@+id/labesenha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:text="@string/esqueceusenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:id="@+id/tvrecsenha" />

</RelativeLayout>
