<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/labelnome"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
      >
        <EditText
            android:id="@+id/txtnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_nome"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/labelemail"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelnome">
        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/labesenha"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelemail">

        <EditText
            android:id="@+id/txtsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitulo"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_senha"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/Btncadastro"
        android:id="@+id/cadd"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="80dp"
        android:layout_alignParentStart="true" />



</RelativeLayout>